[package]
name = "ab3de_engine"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
native-winit = []
wasm-weblike-manual = []

# default = ["native-winit"]
default = ["native-winit", "wasm-weblike-manual"]

[dependencies]
anyhow = { workspace = true }
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
image = { version = "0.24.9", default-features = false, features = [
  "png",
  "jpeg",
  "hdr",
] }
log = { workspace = true }
# disabled vek because: https://github.com/yoanlcq/vek/issues/96
mmd = { version = "0.0.6", default-features = false, features = ["arrayvec"] }
rust-embed = "8.9.0"
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
trig-const = "0.3.0"
wesl = "0.3.2"
wgpu = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["Document", "Window", "Element"] }

[build-dependencies]
wesl = "0.3.2"
