[package]
name = "ab3de_ui"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ab3de_engine = { workspace = true }
ab3de_internal_shared = { workspace = true }

egui = "0.33.3"
egui-wgpu = "0.33.3"
glam = { workspace = true }
type-map = "0.5.1"
wgpu = { workspace = true }
