[package]
name = "learn_wgpu_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
image = { version = "0.25.9", default-features = false, features = [
  "png",
  "jpeg",
] }
log = "0.4.29"
pollster = "0.4.0"
rust-embed = "8.9.0"
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
trig-const = "0.3.0"
wgpu = "27.0.1"
winit = { version = "0.30.12", features = ["android-native-activity"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["Document", "Window", "Element"] }

[lib]
crate-type = ["cdylib", "rlib"]
