[package]
name = "escript_demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
eframe = { workspace = true, default-features = true }
egui = { workspace = true }

derive_more = { version = "2.1.1", features = ["debug"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
